fixes horizontal scroll on mobile, adds scrollTop function to header logo

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -27,6 +27,10 @@ footer {
   opacity: 0.7;
 }
 
+.footerDiv>*:focus {
+  outline: none
+}
+
 .scrollTopBtnDiv {
   margin: 0 auto 0.75em;
 }
