--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -21,11 +21,25 @@
   top: 0;
 }
 
+.logoBtn {
+  border: none;
+  background: none;
+  cursor: pointer
+}
+
+.logoBtn:hover,
+.logoBtn:focus {
+  box-shadow:
+    0 2px 2px rgba(0, 0, 0, 0.015), 0 15px 15px rgba(0, 0, 0, 0.025), 0 30px 30px rgba(0, 0, 0, 0.035), 0 45px 45px rgba(0, 0, 0, 0.045)
+}
+
+.logoBtn:focus {
+  outline: none
+}
+
 .logoImg {
   width: 100px;
   border-radius: 5px;
-  /* box-shadow:
-    0 2px 2px rgba(0, 0, 0, 0.125), 0 15px 15px rgba(0, 0, 0, 0.135), 0 30px 30px rgba(0, 0, 0, 0.145), 0 45px 45px rgba(0, 0, 0, 0.155) */
 }
 
 .menuDiv {
