--- a/src/components/nav-menu.module.css
+++ b/src/components/nav-menu.module.css
@@ -24,3 +24,7 @@ li {
 .menuBtn:focus {
   background-color: #bfbfbf;
 }
+
+.menuBtn:focus {
+  outline: none;
+}
